[package]
name = "rocker"
version = "0.1.0"
authors = ["Shiju <shijuleon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rtnetlink = "0.3.0"
tokio = { version = "0.2", features = ["full"] }
ipnetwork = "0.16.0"
futures = "0.3.5"
reqwest = { version = "0.10", features = ["json"] }
# serde = { version = "1.0.113", features = ["derive"] }
serde_json = "1.0.55"
ring = "0.16.15"
data-encoding = "2.2.1"